# PokerGame

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  PokerClasses.puml  PokerGame.puml  README.md
Assignment/: CMakeLists.txt
Assignment/src/: PokerGame.cpp  PokerGame.h
Assignment/src/game/: PokerEngine.cpp  PokerEngine.h
Assignment/src/game/player/: AIPokerPlayer.cpp  AIPokerPlayer.h  HumanPokerPlayer.cpp  HumanPokerPlayer.h  PokerPlayer.cpp  PokerPlayer.h
Assignment/src/game/resources/: Card.cpp  Card.h  CardCollection.cpp  CardCollection.h  Deck.cpp  Deck.h  Hand.cpp  Hand.h  PokerHand.cpp  PokerHand.h
Assignment/test/: CMakeLists.txt  PokerGameUnitTest.cpp  PokerGameUnitTest.h  PokerHandTest.cpp  PokerHandTest.h  PokerHandUnitTest.cpp  PokerHandUnitTest.h
Assignment/utils/: Logger.h  Utility.cpp  Utility.h
Experiments/: CMakeLists.txt  PokerDemo.cpp
